--- a/HTML FILIpe/pages/Action.html
+++ b/HTML FILIpe/pages/Action.html
@@ -20,11 +20,11 @@
               <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Categorias</a>
+              <a class="nav-link" href="#">Categories</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Filmes
+                Movies
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="/HTML FILIpe/pages/Action.html">Action</a></li>
@@ -42,14 +42,22 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </nav>
 
+    <p class="placeholder-wave">
+      <span class="placeholder col-12"></span>
+    </p>
+
     <div class="card text-bg-dark" style="width: 18rem;">
       <img src="https://hbomax-images.warnermediacdn.com/images/GX-IlUgib1sIdmgEAAABv/tileburnedin?size=1280x720&partner=hbomaxcom&v=43fe3e03a7841cb0b5a5f04a33beb9f5&host=art-gallery.api.hbo.com&language=pt-br&w=1280" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Mad Max</h5>
         <p class="card-text">Em um futuro sem recursos um homem tenta sobreviver a Guerra</p>
-        <a href="https://www.youtube.com/watch?v=hEJnMQG9ev8" class="btn btn-primary">Trailer</a>
+        <a href="https://www.youtube.com/watch?v=hEJnMQG9ev8" class="btn btn-danger">Trailer</a>
       </div>
     </div>
+
+    <p class="placeholder-wave">
+      <span class="placeholder col-12"></span>
+    </p>
 
     <div class="card text-bg-dark">
       <div class="card-body">
