--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
               <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Categorias</a>
+              <a class="nav-link" href="#">Categories</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Filmes
+                Movies
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="/HTML FILIpe/pages/Action.html">Action</a></li>
